# PKTKey

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
config/: telex.toml  telex_original.toml  vni.toml
crates/capi/: Cargo.toml
crates/capi/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  dict.rs  engine.rs  freq.rs  lib.rs  mapping.rs  phonetic.rs  tone.rs  validator.rs
crates/core/tests/: integration.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
scripts/: build-linux.sh  build-mac.sh  build-win.ps1
web/: index.html
